<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingRight="@dimen/dimen_8"
            android:text="@string/unit_book_price"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="@dimen/dimen_35"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/minus"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:textSize="@dimen/text_size_20" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="@dimen/dimen_35"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginLeft="@dimen/activity_margin"
            android:text="@string/plus"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/edit"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/contact_supplier_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact_supplier"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />
</LinearLayout>